--- a/MyApplication/app/src/main/res/layout/activity_main_appbar.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main_appbar.xml
@@ -28,7 +28,7 @@
         <fragment
             android:id="@+id/fragment_navigation_drawer"
             android:name="com.example.hiciu.materialtest1.fragments.NavigationDrawerFragment"
-            android:layout_width="280dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:layout="@layout/fragment_navigation_drawer"
