--- a/MyApplication/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,4 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<org.lucasr.dspec.DesignSpecFrameLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:designSpec="@raw/defaults">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,10 +13,25 @@
 
     tools:context=".fragments.NavigationDrawerFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/containerDrawerImage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:background="#FB8C00">
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="280dp"
+            android:layout_height="140dp" />
+
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/drawerList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/containerDrawerImage">
+
+    </android.support.v7.widget.RecyclerView>
+
+</RelativeLayout>
+</org.lucasr.dspec.DesignSpecFrameLayout>
