--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="primaryColor">#FFEB3B</color>
     <color name="primaryColorDark">#FBC02D</color>
     <color name="accentColor">#F44336</color>
+    <color name="colorHighlight">#B6B6B6</color>
 </resources>
