--- a/MyApplication/app/src/main/res/layout/custom_row.xml
+++ b/MyApplication/app/src/main/res/layout/custom_row.xml
@@ -5,7 +5,8 @@
     android:orientation="horizontal"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
-
+    android:background="@drawable/custom_bg"
+    android:clickable="true"
     >
     <!--tools:showIn="@layout/fragment_navigation_drawer"-->
 
