--- a/MyApplication/app/src/main/res/layout/activity_third.xml
+++ b/MyApplication/app/src/main/res/layout/activity_third.xml
@@ -18,48 +18,77 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/background_light"
+
             android:fitsSystemWindows="true"
             tools:context="com.example.hiciu.materialtest1.activities.ThirdActivity">
 
             <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/AppTheme.AppBarOverlay">
+                android:theme="@style/AppTheme.Base">
 
                 <android.support.design.widget.CollapsingToolbarLayout
                     android:id="@+id/main.collapsing"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
+                    android:layout_height="wrap_content"
                     android:fitsSystemWindows="true"
                     app:contentScrim="?attr/colorPrimary"
                     app:expandedTitleMarginEnd="64dp"
                     app:expandedTitleMarginStart="48dp"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                    app:layout_scrollFlags="scroll|snap">
 
-                    <ImageView
-                        android:id="@+id/main.backdrop"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fitsSystemWindows="true"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/images"
-                        app:layout_collapseMode="parallax" />
+                      <ImageView
+                           android:id="@+id/main.backdrop"
+                           android:layout_width="match_parent"
+                           android:layout_height="140dp"
+                           android:fitsSystemWindows="true"
+                           android:src="@drawable/mushroom"
+                           app:layout_collapseMode="parallax" />
 
 
-                    <android.support.v7.widget.Toolbar
-                        android:id="@id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        app:layout_collapseMode="pin"
 
-                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
                 </android.support.design.widget.CollapsingToolbarLayout>
+                <android.support.v7.widget.Toolbar
+                    android:id="@id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/layout_anchor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="test text" />
+                </LinearLayout>
+
+                <it.neokree.materialtabs.MaterialTabHost
+                    android:id="@+id/materialTabHost"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    app:accentColor="@color/accentColor"
+                    app:layout_collapseMode="pin"
+                    app:primaryColor="@color/primaryColor"
+                    app:textColor="#FFFFFF"
+                    app:layout_anchor="@id/layout_anchor"/>
+
+
+                <!--
+
+                                    </RelativeLayout>
+                -->
             </android.support.design.widget.AppBarLayout>
 
-            <include layout="@layout/content_third" />
 
+            <include layout="@layout/content_third" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab"
@@ -69,7 +98,6 @@
                 android:layout_margin="@dimen/fab_margin"
                 android:src="@android:drawable/ic_dialog_email"
                 app:layout_behavior="com.example.hiciu.materialtest1.CustomGUI.FloatingActionButtonBehavior" />
-
 
 
         </android.support.design.widget.CoordinatorLayout>
