--- a/MyApplication/app/src/main/res/layout/content_third.xml
+++ b/MyApplication/app/src/main/res/layout/content_third.xml
@@ -15,16 +15,14 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:lineSpacingExtra="8dp"
-            android:text="Text test"
-            android:padding="@dimen/activity_horizontal_margin"
-            />
+            android:layout_height="0dp"
+            android:layout_weight="1" />
     </android.support.v4.widget.NestedScrollView>
+
+
 </RelativeLayout>
