--- a/MyApplication/app/src/main/res/layout/activity_third.xml
+++ b/MyApplication/app/src/main/res/layout/activity_third.xml
@@ -30,61 +30,66 @@
                 <android.support.design.widget.CollapsingToolbarLayout
                     android:id="@+id/main.collapsing"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="300dp"
                     android:fitsSystemWindows="true"
                     app:contentScrim="?attr/colorPrimary"
                     app:expandedTitleMarginEnd="64dp"
                     app:expandedTitleMarginStart="48dp"
-                    app:layout_scrollFlags="scroll|snap">
+                    app:layout_scrollFlags="scroll|snap"
+                    >
 
-                      <ImageView
-                           android:id="@+id/main.backdrop"
-                           android:layout_width="match_parent"
-                           android:layout_height="140dp"
-                           android:fitsSystemWindows="true"
-                           android:src="@drawable/mushroom"
-                           app:layout_collapseMode="parallax" />
+                 <!--   <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_collapseMode="parallax">
+-->
+                        <ImageView
+                            android:id="@+id/main.image1"
+                            android:layout_width="match_parent"
+                            android:layout_height="140dp"
+                            android:fitsSystemWindows="true"
+                            android:src="@drawable/mushroom"
+                            app:layout_collapseMode="parallax"
+                            android:layout_gravity="center_horizontal"/>
 
 
 
+                        <ImageView
+                            android:id="@+id/main.image2"
+                            android:layout_width="match_parent"
+                            android:layout_height="140dp"
+                            android:fitsSystemWindows="true"
+                            android:src="@drawable/mushroom"
+                            app:layout_collapseMode="parallax"
+                            android:layout_gravity="bottom|center_horizontal"/>
+
+
+                   <!-- </LinearLayout>-->
 
                 </android.support.design.widget.CollapsingToolbarLayout>
+
+
                 <android.support.v7.widget.Toolbar
                     android:id="@id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
+
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-                <LinearLayout
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/layout_anchor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="test text" />
-                </LinearLayout>
-
+                <ImageView
+                    android:id="@+id/main.image3"
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:fitsSystemWindows="true"
+                    android:src="@drawable/mushroom"
+                    app:layout_scrollFlags="scroll|snap"
+                    />
                 <it.neokree.materialtabs.MaterialTabHost
                     android:id="@+id/materialTabHost"
-
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     app:accentColor="@color/accentColor"
-                    app:layout_collapseMode="pin"
-                    app:primaryColor="@color/primaryColor"
-                    app:textColor="#FFFFFF"
-                    app:layout_anchor="@id/layout_anchor"/>
-
-
-                <!--
-
-                                    </RelativeLayout>
-                -->
+                    app:textColor="#FFFFFF" />
             </android.support.design.widget.AppBarLayout>
 
 
