--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#0000FF</color>
+    <color name="primaryColor">#FFEB3B</color>
     <color name="primaryColorDark">#FBC02D</color>
     <color name="accentColor">#F44336</color>
     <color name="colorHighlight">#B6B6B6</color>
