* managed to get tabhost with parallax animations

--- a/MyApplication/app/src/main/res/layout/fragment_dummy.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_dummy.xml
@@ -1,13 +1,23 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<com.github.ksoichiro.android.observablescrollview.ObservableScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroll"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:fillViewport="true"
+    android:overScrollMode="never">
+&lt;!&ndash;-->
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <TextView
-        android:id="@+id/theText"
+    <LinearLayout
+        android:id="@+id/cont"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@android:color/black"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
 
-</FrameLayout>
+</android.support.v4.widget.NestedScrollView>
+
+    <!--
+    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>-->
