--- a/MyApplication/app/src/main/res/layout/activity_sub.xml
+++ b/MyApplication/app/src/main/res/layout/activity_sub.xml
@@ -1,24 +1,86 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".activities.SubActivity">
+    android:background="@android:color/holo_orange_dark">
 
-    <include
+    <!--
+    Padding for ViewPager must be set outside the ViewPager itself
+    because with padding, EdgeEffect of ViewPager become strange.
+    -->
+    <!--<FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp">
+
+
+    </FrameLayout>
+-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_marginTop="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/blue" />
+
+
+        <LinearLayout
+            android:id="@+id/myImage"
+            android:layout_width="match_parent"
+            android:layout_height="197dp"
+            android:layout_marginTop="56dp"
+            android:background="@color/red"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+
+    <!--  <ImageView
+          android:id="@+id/myImage"
+
+          android:layout_width="200dp"
+          android:layout_height="200dp"
+          android:scaleType="centerCrop"
+          android:src="@drawable/example" />-->
+
+
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="210dp"
+        android:orientation="vertical">
+
+
+        <!--  <View
+              android:id="@+id/mutama"
+              android:layout_width="wrap_content"
+              android:layout_height="200dp"
+              />
+  -->
+        <com.example.hiciu.materialtest1.tabs.SlidingTabLayout
+            android:id="@+id/sliding_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@color/primaryColor" />
+    </LinearLayout>
+
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        layout="@layout/app_bar">
-    </include>
-
-    <include layout="@layout/content_sub" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/sym_call_incoming" />
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
+        app:theme="@style/MyCustomToolBarTheme" />
 
-</android.support.design.widget.CoordinatorLayout>
+
+</FrameLayout>
