--- a/MyApplication/app/src/main/res/layout/activity_third.xml
+++ b/MyApplication/app/src/main/res/layout/activity_third.xml
@@ -7,11 +7,6 @@
     android:layout_height="match_parent">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".activities.MainActivity">
 
         <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -71,7 +66,21 @@
                     app:layout_anchor="@id/anchorId"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
 
-            <include layout="@layout/content_third" />
+            <!--<include layout="@layout/content_third" />-->
+
+<!--            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    />
+            <!--</android.support.v4.widget.NestedScrollView>-->
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab"
@@ -84,7 +93,6 @@
 
 
         </android.support.design.widget.CoordinatorLayout>
-    </LinearLayout>
 
     <fragment
         android:id="@+id/fragment_navigation_drawer"
