--- a/MyApplication/app/src/main/res/layout/content_third.xml
+++ b/MyApplication/app/src/main/res/layout/content_third.xml
@@ -22,7 +22,8 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            />
     </android.support.v4.widget.NestedScrollView>
 
 
